WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239899
REGRESSION(
r293608
): [GTK][WPE] Broke clang builds
https://bugs.webkit.org/show_bug.cgi?id=239899
Summary
REGRESSION(r293608): [GTK][WPE] Broke clang builds
Philippe Normand
Reported
2022-04-29 07:37:18 PDT
+++ This bug was initially created as a clone of
Bug #239881
+++ [GCC] std::remove_cvref is undefined in GCC8.4 In file included from /app/webkit/Source/WTF/wtf/FunctionDispatcher.cpp:26: In file included from /app/webkit/Source/WTF/config.h:31: In file included from /app/webkit/Source/WTF/wtf/FastMalloc.h:26: /app/webkit/Source/WTF/wtf/StdLibExtras.h:612:8: error: redefinition of 'remove_cvref' struct remove_cvref { ^ /usr/lib/gcc/x86_64-unknown-linux-gnu/11.2.0/../../../../include/c++/11.2.0/type_traits:3225:12: note: previous definition is here struct remove_cvref ^ 1 error generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2022-04-29 07:39:54 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/437
EWS
Comment 2
2022-04-29 09:36:51 PDT
Committed
r293619
(
250125@main
): <
https://commits.webkit.org/250125@main
> Reviewed commits have been landed. Closing PR #437 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug