REGRESSION(r293608): [GTK][WPE] Broke clang builds https://bugs.webkit.org/show_bug.cgi?id=239899

Patch by Philippe Normand <pnormand@igalia.com> on 2022-04-29
Reviewed by Michael Catanzaro.

* wtf/StdLibExtras.h: Restrict std::remove_cvref hacks to GCC.

Canonical link: https://commits.webkit.org/250125@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293619 268f45cc-cd09-0410-ab3c-d52691b4dbfc